--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "todoreact",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mateoguzmana.github.io/TodoReact/",
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "gh-pages": "^1.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
@@ -14,6 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
